--- a/SCME.UI/app.config
+++ b/SCME.UI/app.config
@@ -71,9 +71,6 @@
       <setting name="TechPassword" serializeAs="String">
         <value />
       </setting>
-      <setting name="Localization" serializeAs="String">
-        <value>en-EN</value>
-      </setting>
       <setting name="PlotUserSL" serializeAs="String">
         <value>False</value>
       </setting>
@@ -95,7 +92,6 @@
       <setting name="SinglePositionModuleMode" serializeAs="String">
         <value>True</value>
       </setting>
-     
       <setting name="CommExIsVisible" serializeAs="String">
         <value>False</value>
       </setting>
@@ -108,7 +104,6 @@
       <setting name="AccountsPath" serializeAs="String">
         <value>AccountsConfig\Accounts.xml</value>
       </setting>
-     
       <setting name="ClampIsVisible" serializeAs="String">
         <value>True</value>
       </setting>
@@ -145,8 +140,8 @@
       <setting name="IHIsVisible" serializeAs="String">
         <value>True</value>
       </setting>
-      <setting name="SpecialMeasureForUse" serializeAs="String">
-        <value>True</value>
+      <setting name="MMECode" serializeAs="String">
+        <value>A</value>
       </setting>
       <setting name="TOUIsVisible" serializeAs="String">
         <value>True</value>
@@ -156,6 +151,12 @@
       </setting>
       <setting name="DUTType" serializeAs="String">
         <value>Profile</value>
+      </setting>
+      <setting name="Localization" serializeAs="String">
+        <value>en-EN</value>
+      </setting>
+      <setting name="SpecialMeasureForUse" serializeAs="String">
+        <value>True</value>
       </setting>
       <setting name="OperatorBuildModeIsEnabled" serializeAs="String">
         <value>False</value>
