--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,7 @@ binServer/
 binProfileBuilder/
 binProfileBuilder.zip
 mme_software.zip
+Debug.rar
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
