--- a/SCME.ProfileBuilder/App.config
+++ b/SCME.ProfileBuilder/App.config
@@ -4,8 +4,8 @@
       <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
           <section name="SCME.ProfileBuilder.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
       </sectionGroup>
-    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-      <section name="SCME.ProfileBuilder.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="SCME.ProfileBuilder.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
     </sectionGroup>
   </configSections>
   <system.serviceModel>
@@ -40,14 +40,14 @@
   </system.serviceModel>
     <startup> 
         
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/></startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2"/></startup>
   <applicationSettings>
     <SCME.ProfileBuilder.Properties.Settings>
       <setting name="CurrentCulture" serializeAs="String">
         <value>ru-RU</value>
       </setting>
       <setting name="MSSQLServer" serializeAs="String">
-        <value>IVAN-PC\SQLEXPRESS01</value>
+        <value>192.168.0.134,1444</value>
       </setting>
       <setting name="MSSQLIntegratedSecurity" serializeAs="String">
         <value>False</value>
@@ -62,16 +62,16 @@
         <value>True</value>
       </setting>
       <setting name="MSSQLPassword" serializeAs="String">
-        <value>qwerty_123</value>
+        <value>Hpl1520</value>
       </setting>
       <setting name="SQLiteFileName" serializeAs="String">
         <value>C:\Users\Ivan\Desktop\SCME_ResultsDB_Local.sqlite</value>
       </setting>
       <setting name="TypeDb" serializeAs="String">
-        <value>SQLite</value>
+        <value>MSSQL</value>
       </setting>
       <setting name="MSSQLDatabase" serializeAs="String">
-        <value>SCME_ResultsDBTest</value>
+        <value>SCME_ResultsDB</value>
       </setting>
     </SCME.ProfileBuilder.Properties.Settings>
   </applicationSettings>
