--- a/SCME.ProfileBuilder/App.config
+++ b/SCME.ProfileBuilder/App.config
@@ -47,7 +47,7 @@
         <value>ru-RU</value>
       </setting>
       <setting name="MSSQLServer" serializeAs="String">
-        <value>192.168.0.134,1444</value>
+        <value>IVAN-PC\SQLEXPRESS01</value>
       </setting>
       <setting name="MSSQLIntegratedSecurity" serializeAs="String">
         <value>False</value>
@@ -62,7 +62,7 @@
         <value>True</value>
       </setting>
       <setting name="MSSQLPassword" serializeAs="String">
-        <value>Hpl1520</value>
+        <value>qwerty_123</value>
       </setting>
       <setting name="SQLiteFileName" serializeAs="String">
         <value>C:\Users\Ivan\Desktop\SCME_ResultsDB_Local.sqlite</value>
