BF RAC Index for UserTest

--- a/SCME.DatabaseServer/App.config
+++ b/SCME.DatabaseServer/App.config
@@ -46,9 +46,6 @@
       <setting name="DBIntegratedSecurity" serializeAs="String">
         <value>False</value>
       </setting>
-      <setting name="DBName" serializeAs="String">
-        <value>SCME_ResultsDBTest</value>
-      </setting>
       <setting name="DBPassword" serializeAs="String">
         <value>qwerty_123</value>
       </setting>
@@ -60,6 +57,9 @@
       </setting>
       <setting name="DBUser" serializeAs="String">
         <value>sa</value>
+      </setting>
+      <setting name="DBName" serializeAs="String">
+        <value>SCME_ResultsDB</value>
       </setting>
     </SCME.DatabaseServer.Properties.Settings>
   </applicationSettings>
