--- a/SCME.DatabaseServer/Properties/Settings.settings
+++ b/SCME.DatabaseServer/Properties/Settings.settings
@@ -5,9 +5,6 @@
     <Setting Name="DBIntegratedSecurity" Type="System.Boolean" Scope="Application">
       <Value Profile="(Default)">False</Value>
     </Setting>
-    <Setting Name="DBName" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">SCME_ResultsDBTest</Value>
-    </Setting>
     <Setting Name="DBPassword" Type="System.String" Scope="Application">
       <Value Profile="(Default)">qwerty_123</Value>
     </Setting>
@@ -19,6 +16,9 @@
     </Setting>
     <Setting Name="DBUser" Type="System.String" Scope="Application">
       <Value Profile="(Default)">sa</Value>
+    </Setting>
+    <Setting Name="DBName" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">SCME_ResultsDB</Value>
     </Setting>
   </Settings>
 </SettingsFile>
