--- a/SCME.ProfileBuilder/Properties/Settings.settings
+++ b/SCME.ProfileBuilder/Properties/Settings.settings
@@ -30,10 +30,10 @@
       <Value Profile="(Default)">C:\Users\Ivan\Desktop\SCME_ResultsDB_Local.sqlite</Value>
     </Setting>
     <Setting Name="TypeDb" Type="SCME.Types.TypeDb" Scope="Application">
-      <Value Profile="(Default)">SQLite</Value>
+      <Value Profile="(Default)">MSSQL</Value>
     </Setting>
     <Setting Name="MSSQLDatabase" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">SCME_ResultsDBTest</Value>
+      <Value Profile="(Default)">SCME_ResultsDB</Value>
     </Setting>
   </Settings>
 </SettingsFile>
