BF RAC Index for UserTest

--- a/SCME.Service/app.config
+++ b/SCME.Service/app.config
@@ -46,8 +46,8 @@
 
     <client>
       <endpoint address="net.tcp://PROTONETX-SERVE:702/SCME/SCME.PrintingService.MME" behaviorConfiguration="DefaultClientEndpointBehavior" binding="netTcpBinding" bindingConfiguration="DefaultTcpBinding" contract="SCME.Types.IPrintingService" name="SCME.PrintingService" />
-      <endpoint address="net.tcp://192.168.0.134:730/SCME/SCME.IO.CentralDatabaseService" behaviorConfiguration="DefaultClientEndpointBehavior" binding="netTcpBinding" bindingConfiguration="DefaultTcpBinding" contract="SCME.Types.DatabaseServer.ICentralDatabaseService" name="SCME.CentralDatabaseService" />
-      <endpoint address="net.tcp://192.168.0.134:730/SCME/CentralDatabase" behaviorConfiguration="DefaultClientEndpointBehavior" binding="netTcpBinding" bindingConfiguration="DefaultTcpBinding" contract="SCME.Types.Database.IDbService" name="SCME.CentralDatabase" />
+      <endpoint address="net.tcp://127.0.0.1:730/SCME/SCME.IO.CentralDatabaseService" behaviorConfiguration="DefaultClientEndpointBehavior" binding="netTcpBinding" bindingConfiguration="DefaultTcpBinding" contract="SCME.Types.DatabaseServer.ICentralDatabaseService" name="SCME.CentralDatabaseService" />
+      <endpoint address="net.tcp://127.0.0.1:730/SCME/CentralDatabase" behaviorConfiguration="DefaultClientEndpointBehavior" binding="netTcpBinding" bindingConfiguration="DefaultTcpBinding" contract="SCME.Types.Database.IDbService" name="SCME.CentralDatabase" />
     </client>
 
   </system.serviceModel>
@@ -232,7 +232,7 @@
         <value>False</value>
       </setting>
       <setting name="MMECode" serializeAs="String">
-        <value>MME010</value>
+        <value>A</value>
       </setting>
     </SCME.Service.Properties.Settings>
   </applicationSettings>
