Update for Agent Service RAC bug fix

--- a/SCME.Agent/app.config
+++ b/SCME.Agent/app.config
@@ -25,6 +25,9 @@
       <setting name="ProxyInitDelayMs" serializeAs="String">
         <value>1000</value>
       </setting>
+      <setting name="UpdateServerUrl" serializeAs="String">
+        <value>http://127.0.0.1:731</value>
+      </setting>
     </SCME.Agent.Properties.Settings>
   </applicationSettings>
   <startup>
