--- a/SCME.Agent/Properties/Settings.settings
+++ b/SCME.Agent/Properties/Settings.settings
@@ -20,5 +20,8 @@
     <Setting Name="ProxyInitDelayMs" Type="System.Int32" Scope="Application">
       <Value Profile="(Default)">1000</Value>
     </Setting>
+    <Setting Name="UpdateServerUrl" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">http://127.0.0.1:731</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
