--- a/SCME.UpdateServer/appsettings.json
+++ b/SCME.UpdateServer/appsettings.json
@@ -10,8 +10,21 @@
 
   "HostUrl" :  "http://127.0.0.1:731",
   
-  "MyConfig" : {
-    "DataPath" : "d:\\data"
+  "UpdateDataConfig" : {
+    "DataPathRoot" : "d:\\data",
+    "ScmeAgentFolderName" : "SCME.Agent",
+    "ScmeAgentExeName" : "SCME.Agent.exe",
+    "ScmeServiceConfigName" : "SCME.Service.exe.config",
+    "ScmeUiConfigName": "SCME.UI.exe.config",
+    "MmeParameters" : [
+      {
+        "Name" : "MME009",
+        "Folder" : "Build-2020-01-02",
+        "Configs": [
+          { "TOUIsVisible": "False"}
+        ]
+      }
+    ]
   }
   
   
