--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,7 @@ binProfileBuilder/
 binProfileBuilder.zip
 mme_software.zip
 Debug.rar
+launchSettings.*
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
