--- a/SCME.Service/SCME.SERVICE.csproj
+++ b/SCME.Service/SCME.SERVICE.csproj
@@ -148,11 +148,6 @@
     <Compile Include="ControlServer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Properties\Settings.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTimeSharedInput>True</DesignTimeSharedInput>
-      <DependentUpon>Settings.settings</DependentUpon>
-    </Compile>
     <Compile Include="SystemHost.cs" />
     <Compile Include="Threads.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -175,10 +170,6 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="packages.config" />
-    <None Include="Properties\Settings.settings">
-      <Generator>SettingsSingleFileGenerator</Generator>
-      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
-    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SCME.InterfaceImplementations\SCME.InterfaceImplementations.csproj">
@@ -192,6 +183,10 @@
     <ProjectReference Include="..\SCME.TYPES\SCME.Types.csproj">
       <Project>{af537bdd-6460-4cca-b894-added01e6b94}</Project>
       <Name>SCME.Types</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SCME.UIServiceConfig\SCME.UIServiceConfig.csproj">
+      <Project>{6a7c3037-e15a-44c8-846d-65f7a486f641}</Project>
+      <Name>SCME.UIServiceConfig</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
