--- a/SCME.UI/packages.config
+++ b/SCME.UI/packages.config
@@ -1,7 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="ControlzEx" version="3.0.2.4" targetFramework="net461" />
-  <package id="Fody" version="5.0.6" targetFramework="net452" developmentDependency="true" />
-  <package id="PropertyChanged.Fody" version="3.0.1" targetFramework="net452" />
+  <package id="Fody" version="6.1.0" targetFramework="net461" developmentDependency="true" />
+  <package id="PropertyChanged.Fody" version="3.2.6" targetFramework="net461" />
+  <package id="System.Configuration.ConfigurationManager" version="4.7.0" targetFramework="net461" />
+  <package id="System.Security.AccessControl" version="4.7.0" targetFramework="net461" />
+  <package id="System.Security.Permissions" version="4.7.0" targetFramework="net461" />
+  <package id="System.Security.Principal.Windows" version="4.7.0" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
 </packages>
