Agent and updater beta version(without restore backup)

--- a/SCME.UIServiceConfig/App.config
+++ b/SCME.UIServiceConfig/App.config
@@ -298,6 +298,9 @@
       <setting name="MMECode" serializeAs="String">
         <value>MME010</value>
       </setting>
+      <setting name="DebugUpdate" serializeAs="String">
+        <value>True</value>
+      </setting>
     </SCME.UIServiceConfig.Properties.Settings>
   </applicationSettings>
   <userSettings>
