--- a/SCME.UpdateServer/appsettings.json
+++ b/SCME.UpdateServer/appsettings.json
@@ -1,9 +1,9 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Default": "Trace",
+      "System": "Information",
+      "Microsoft": "Error"
     }
   },
   "AllowedHosts": "*",
@@ -16,9 +16,11 @@
     "ScmeAgentExeName" : "SCME.Agent.exe",
     "ScmeServiceConfigName" : "SCME.Service.exe.config",
     "ScmeUiConfigName": "SCME.UI.exe.config",
+    "ScmeCommonConfigName": "SCME.UIServiceConfig.dll.config",
+    "ScmeUIExeName": "SCME.UI.exe",
     "MmeParameters" : [
       {
-        "Name" : "MME009",
+        "Name" : "MME010",
         "Folder" : "Build-2020-01-02",
         "Configs": [
           { "TOUIsVisible": "False"}
