--- a/SCME.UpdateServer/SCME.UpdateServer.csproj
+++ b/SCME.UpdateServer/SCME.UpdateServer.csproj
@@ -1,11 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
     <Folder Include="Config" />
+    <Folder Include="Extensions" />
   </ItemGroup>
 
   <ItemGroup>
