--- a/SCME.UIServiceConfig/App.config
+++ b/SCME.UIServiceConfig/App.config
@@ -296,10 +296,22 @@
         <value>False</value>
       </setting>
       <setting name="MMECode" serializeAs="String">
-        <value>MME010</value>
+        <value>MME009</value>
       </setting>
       <setting name="DebugUpdate" serializeAs="String">
         <value>True</value>
+      </setting>
+      <setting name="DatabaseService" serializeAs="String">
+        <Value>net.tcp://127.0.0.1:800/SCME/SCME.IO.DatabaseService</Value>
+      </setting>
+      <setting name="LocalDatabase" serializeAs="String" >
+        <Value>net.tcp://127.0.0.1:800/SCME/LocalDatabase</Value>
+      </setting>
+      <setting name="CentralDatabaseService" serializeAs="String" >
+        <Value>net.tcp://127.0.0.1:730/SCME/SCME.IO.CentralDatabaseService</Value>
+      </setting>
+      <setting name="CentralDatabase" serializeAs="String" >
+        <Value>net.tcp://127.0.0.1:730/SCME/CentralDatabase</Value>
       </setting>
     </SCME.UIServiceConfig.Properties.Settings>
   </applicationSettings>
