--- a/SCME.UpdateServer/appsettings.json
+++ b/SCME.UpdateServer/appsettings.json
@@ -20,10 +20,34 @@
     "ScmeUIExeName": "SCME.UI.exe",
     "MmeParameters" : [
       {
-        "Name" : "MME010",
+        "Name" : "MME009",
         "Folder" : "Build-2020-01-02",
         "Configs": [
-          { "TOUIsVisible": "False"}
+          { "GateIsVisible": "True"},
+          { "GateIsVisible": "True"},
+          { "TechPassword": "1234"},
+          { "Localization": "ru-RU"},
+          { "IgnoreSC": "False"},
+          { "ClampWithSlidingDevice": "False"},
+          { "QrrTqIsVisible": "False"},
+          { "RACIsVisible": "False"},
+          { "TOUIsVisible": "False"},
+          { "AdapterPort": "1"},
+          { "ClampingSystemEmulation": "False"},
+          { "IncludeDetailsInLog": "True"},
+          { "CommutationEmulation": "False"},
+          { "GatewayEmulation": "False"},
+          { "AdapterEmulation": "False"},
+          { "BVTEmulation": "False"},
+          { "GateEmulation": "False"},
+          { "SLEmulation": "False"},
+          { "dVdtNode": "7"},
+          { "dVdtEmulation": "False"},
+          { "ATUEmulation": "False"},
+          { "SCTUReadGraph": "False"},
+          { "NeedSCTUInitialization": "False"},
+          { "QrrTqReadGraf": "False"},
+          { "MMECode": "MME009"}
         ]
       }
     ]
