SCME.Agent version  language

--- a/SCME.Agent/SCME.Agent.csproj
+++ b/SCME.Agent/SCME.Agent.csproj
@@ -6,6 +6,7 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
 	<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+	<LangVersion>8</LangVersion>
   </PropertyGroup>
 
   
