Add version in UI, prepare update server, agent and update server bf

--- a/SCME.UIServiceConfig/App.config
+++ b/SCME.UIServiceConfig/App.config
@@ -29,7 +29,7 @@
         <value>False</value>
       </setting>
       <setting name="TechPassword" serializeAs="String">
-        <value />
+        <value ></value>
       </setting>
       <setting name="PlotUserSL" serializeAs="String">
         <value>False</value>
@@ -315,11 +315,4 @@
       </setting>
     </SCME.UIServiceConfig.Properties.Settings>
   </applicationSettings>
-  <userSettings>
-    <SCME.UIServiceConfig.Properties.Settings>
-      <setting name="ReadOnlyProfiles" serializeAs="String">
-        <value>False</value>
-      </setting>
-    </SCME.UIServiceConfig.Properties.Settings>
-  </userSettings>
 </configuration>
