--- a/SCME.UpdateServer/appsettings.json
+++ b/SCME.UpdateServer/appsettings.json
@@ -17,13 +17,12 @@
     "ScmeServiceConfigName" : "SCME.Service.exe.config",
     "ScmeUiConfigName": "SCME.UI.exe.config",
     "ScmeCommonConfigName": "SCME.UIServiceConfig.dll.config",
-    "ScmeUIExeName": "SCME.UI.exe",
+    "ScmeUIExeName": "netcoreapp3.1\\SCME.UI.exe",
     "MmeParameters" : [
       {
         "Name" : "MME009",
         "Folder" : "Build-2020-01-02",
         "Configs": [
-          { "GateIsVisible": "True"},
           { "GateIsVisible": "True"},
           { "TechPassword": "1234"},
           { "Localization": "ru-RU"},
@@ -47,13 +46,12 @@
           { "SCTUReadGraph": "False"},
           { "NeedSCTUInitialization": "False"},
           { "QrrTqReadGraf": "False"},
-          { "MMECode": "MME009"}
+          { "MMECode": "MME009"},
+          { "CentralDatabaseService": "net.tcp://192.168.0.134:730/SCME/SCME.IO.CentralDatabaseService"},
+          { "CentralDatabase": "net.tcp://192.168.0.134:730/SCME/CentralDatabase"}
         ]
       }
     ]
   }
-  
-  
-
 
 }
