appsettings lock and editable version
(cherry picked from commit 39b028ed6f5b54ee5958a5f5129e73ddfead64f2)

--- a/SCME.UpdateServer/appsettings.json
+++ b/SCME.UpdateServer/appsettings.json
@@ -11,6 +11,7 @@
   "HostUrl" :  "http://127.0.0.1:731",
   
   "UpdateDataConfig" : {
+    "DebugParameter" : "2",
     "DataPathRoot" : "d:\\data",
     "ScmeAgentFolderName" : "SCME.Agent",
     "ScmeAgentExeName" : "SCME.Agent.exe",
