--- a/SCME.UpdateServer/appsettings.json
+++ b/SCME.UpdateServer/appsettings.json
@@ -18,7 +18,7 @@
     "ScmeServiceConfigName" : "SCME.Service.exe.config",
     "ScmeUiConfigName": "SCME.UI.exe.config",
     "ScmeCommonConfigName": "SCME.UIServiceConfig.dll.config",
-    "ScmeUIExeName": "netcoreapp3.1\\SCME.UI.exe",
+    "ScmeUIExeName": "UI\\SCME.UI.exe",
     "MmeParameters" : [
       {
         "Name" : "MME009",
@@ -49,7 +49,8 @@
           { "QrrTqReadGraf": "False"},
           { "MMECode": "MME009"},
           { "CentralDatabaseService": "net.tcp://192.168.0.134:730/SCME/SCME.IO.CentralDatabaseService"},
-          { "CentralDatabase": "net.tcp://192.168.0.134:730/SCME/CentralDatabase"}
+          { "CentralDatabase": "net.tcp://192.168.0.134:730/SCME/CentralDatabase"},
+          { "Localization":  "en-US"}
         ]
       }
     ]
