--- a/SCME.ProfileBuilder/Properties/Settings.settings
+++ b/SCME.ProfileBuilder/Properties/Settings.settings
@@ -21,7 +21,7 @@
       <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="LastSelectedMMECode" Type="System.String" Scope="User">
-      <Value Profile="(Default)">MME005</Value>
+      <Value Profile="(Default)">A</Value>
     </Setting>
     <Setting Name="MSSQLPassword" Type="System.String" Scope="Application">
       <Value Profile="(Default)">qwerty_123</Value>
