--- a/SCME.UpdateServer/SCME.UpdateServer.csproj
+++ b/SCME.UpdateServer/SCME.UpdateServer.csproj
@@ -6,6 +6,7 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <PlatformTarget>AnyCPU</PlatformTarget>
+    <Prefer32bit>true</Prefer32bit>
   </PropertyGroup>
 
   <ItemGroup>
