--- a/SCME.UpdateServer/appsettings.json
+++ b/SCME.UpdateServer/appsettings.json
@@ -21,36 +21,88 @@
     "ScmeUIExeName": "UI\\SCME.UI.exe",
     "MmeParameters" : [
       {
-        "Name" : "MME009",
-        "Folder" : "Build-2020-01-02",
+        "Name": "MME007",
+        "Folder": "UIService_3.1.7390.29156",
         "Configs": [
-          { "GateIsVisible": "True"},
-          { "TechPassword": "1234"},
-          { "Localization": "ru-RU"},
-          { "IgnoreSC": "False"},
-          { "ClampWithSlidingDevice": "False"},
-          { "QrrTqIsVisible": "False"},
-          { "RACIsVisible": "False"},
-          { "TOUIsVisible": "False"},
-          { "AdapterPort": "1"},
-          { "ClampingSystemEmulation": "False"},
-          { "IncludeDetailsInLog": "True"},
-          { "CommutationEmulation": "False"},
-          { "GatewayEmulation": "False"},
-          { "AdapterEmulation": "False"},
-          { "BVTEmulation": "False"},
-          { "GateEmulation": "False"},
-          { "SLEmulation": "False"},
-          { "dVdtNode": "7"},
-          { "dVdtEmulation": "False"},
-          { "ATUEmulation": "False"},
-          { "SCTUReadGraph": "False"},
-          { "NeedSCTUInitialization": "False"},
-          { "QrrTqReadGraf": "False"},
-          { "MMECode": "MME009"},
-          { "CentralDatabaseService": "net.tcp://192.168.0.134:730/SCME/SCME.IO.CentralDatabaseService"},
-          { "CentralDatabase": "net.tcp://192.168.0.134:730/SCME/CentralDatabase"},
-          { "Localization":  "en-US"}
+          {
+            "GateIsVisible": "True"
+          },
+          {
+            "TechPassword": "1234"
+          },
+          {
+            "Localization": "ru-RU"
+          },
+          {
+            "dVdtIsVisible": "False"
+          },
+          {
+            "QrrTqIsVisible": "False"
+          },
+          {
+            "PlotUserQrrTq": "False"
+          },
+          {
+            "RACIsVisible": "False"
+          },
+          {
+            "IHIsVisible": "False"
+          },
+          {
+            "MMECode": "MME007"
+          },
+          {
+            "ClampWithSlidingDevice": "False"
+          },
+          {
+            "SLNode": "11"
+          },
+          {
+            "AdapterPort": "1"
+          },
+          {
+            "ClampingSystemEmulation": "False"
+          },
+          {
+            "IncludeDetailsInLog": "True"
+          },
+          {
+            "CommutationEmulation": "False"
+          },
+          {
+            "GatewayEmulation": "False"
+          },
+          {
+            "AdapterEmulation": "False"
+          },
+          {
+            "BVTEmulation": "False"
+          },
+          {
+            "GateEmulation": "False"
+          },
+          {
+            "SLEmulation": "False"
+          },
+          {
+            "dVdtNode": "7"
+          },
+          {
+            "SCTUReadGraph": "False"
+          },
+          {
+            "NeedSCTUInitialization": "False"
+          },
+
+          {
+            "CentralDatabaseService": "net.tcp://192.168.0.134:730/SCME/SCME.IO.CentralDatabaseService"
+          },
+          {
+            "CentralDatabase": "net.tcp://192.168.0.134:730/SCME/CentralDatabase"
+          },
+          {
+            "Localization": "en-US"
+          }
         ]
       }
     ]
