--- a/SCME.Agent/SCME.Agent.csproj
+++ b/SCME.Agent/SCME.Agent.csproj
@@ -11,6 +11,7 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <PlatformTarget>x86</PlatformTarget>
+    <Prefer32bit>true</Prefer32bit>
   </PropertyGroup>
 
   
