--- a/SCME.Agent/appsettings.json
+++ b/SCME.Agent/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
     "ConfigData": {
         "ServiceAppPath" : "C:\\Users\\Ivan\\Desktop\\Работа\\mme_software_TS05\\Debug\\UIService\\SCME.Service.exe",
-        "UIAppPath" : "C:\\Users\\Ivan\\Desktop\\Работа\\mme_software_TS05\\Debug\\UIService\\netcoreapp3.1\\SCME.UI.exe",
+        "UIAppPath" : "C:\\Users\\Ivan\\Desktop\\Работа\\mme_software_TS05\\Debug\\UIService\\UI\\SCME.UI.exe",
         "ProxyAppPath" : "SCME.Proxy.exe",
         "IsProxyEnabled" : "false",
         "ProxyInitDelayMs" : 1000,
