--- a/SCME.UIServiceConfig/App.config
+++ b/SCME.UIServiceConfig/App.config
@@ -296,7 +296,7 @@
         <value>False</value>
       </setting>
       <setting name="MMECode" serializeAs="String">
-        <value>A</value>
+        <value>MME007</value>
       </setting>
       <setting name="DebugUpdate" serializeAs="String">
         <value>True</value>
