Agent download latest version without old. HF UpdateServer appsettings.json work

--- a/SCME.Agent/appsettings.json
+++ b/SCME.Agent/appsettings.json
@@ -1,12 +1,13 @@
 ﻿{
     "ConfigData": {
-        "ServiceAppPath" : "C:\\Users\\Ivan\\Desktop\\Работа\\mme_software_TS05\\Debug\\UIService\\SCME.Service.exe",
+        "ServiceAppPath" : "D:\\2\\SCME.Service.exe",
         "UIAppPath" : "C:\\Users\\Ivan\\Desktop\\Работа\\mme_software_TS05\\Debug\\UIService\\UI\\SCME.UI.exe",
         "ProxyAppPath" : "SCME.Proxy.exe",
         "IsProxyEnabled" : "false",
         "ProxyInitDelayMs" : 1000,
         "DebugUpdate" : "true",
         "IsUserInterfaceEnabled": "true",
-        "UpdateServerUrl" : "http://127.0.0.1:731"
+        "UpdateServerUrl" : "http://127.0.0.1:731",
+        "MMECode" : "MME007"
     }
 }
