--- a/SCME.UpdateServer/appsettings.json
+++ b/SCME.UpdateServer/appsettings.json
@@ -7,105 +7,48 @@
     }
   },
   "AllowedHosts": "*",
-
-  "HostUrl" :  "http://127.0.0.1:731",
-  
-  "UpdateDataConfig" : {
-    "DebugParameter" : "2",
-    "DataPathRoot" : "d:\\data",
-    "ScmeAgentFolderName" : "SCME.Agent",
-    "ScmeAgentExeName" : "SCME.Agent.exe",
-    "ScmeServiceConfigName" : "SCME.Service.exe.config",
+  "HostUrl": "http://127.0.0.1:731",
+  "UpdateDataConfig": {
+    "DebugParameter": "2",
+    "DataPathRoot": "d:\\data",
+    "ScmeAgentFolderName": "SCME.Agent",
+    "ScmeAgentExeName": "SCME.Agent.exe",
+    "ScmeServiceConfigName": "SCME.Service.exe.config",
     "ScmeUiConfigName": "SCME.UI.exe.config",
     "ScmeCommonConfigName": "SCME.UIServiceConfig.dll.config",
     "ScmeUIExeName": "UI\\SCME.UI.exe",
-    "MmeParameters" : [
+    "MmeParameters": [
       {
         "Name": "MME007",
         "Folder": "UIService_3.1.7390.29156",
-        "Configs": [
-          {
-            "GateIsVisible": "True"
-          },
-          {
-            "TechPassword": "1234"
-          },
-          {
-            "Localization": "ru-RU"
-          },
-          {
-            "dVdtIsVisible": "False"
-          },
-          {
-            "QrrTqIsVisible": "False"
-          },
-          {
-            "PlotUserQrrTq": "False"
-          },
-          {
-            "RACIsVisible": "False"
-          },
-          {
-            "IHIsVisible": "False"
-          },
-          {
-            "MMECode": "MME007"
-          },
-          {
-            "ClampWithSlidingDevice": "False"
-          },
-          {
-            "SLNode": "11"
-          },
-          {
-            "AdapterPort": "1"
-          },
-          {
-            "ClampingSystemEmulation": "False"
-          },
-          {
-            "IncludeDetailsInLog": "True"
-          },
-          {
-            "CommutationEmulation": "False"
-          },
-          {
-            "GatewayEmulation": "False"
-          },
-          {
-            "AdapterEmulation": "False"
-          },
-          {
-            "BVTEmulation": "False"
-          },
-          {
-            "GateEmulation": "False"
-          },
-          {
-            "SLEmulation": "False"
-          },
-          {
-            "dVdtNode": "7"
-          },
-          {
-            "SCTUReadGraph": "False"
-          },
-          {
-            "NeedSCTUInitialization": "False"
-          },
-
-          {
-            "CentralDatabaseService": "net.tcp://192.168.0.134:730/SCME/SCME.IO.CentralDatabaseService"
-          },
-          {
-            "CentralDatabase": "net.tcp://192.168.0.134:730/SCME/CentralDatabase"
-          },
-          {
-            "Localization": "en-US"
-          }
-        ]
+        "Configs": {
+          "GateIsVisible": "True",
+          "TechPassword": "1234",
+          "dVdtIsVisible": "False",
+          "QrrTqIsVisible": "False",
+          "PlotUserQrrTq": "False",
+          "RACIsVisible": "False",
+          "IHIsVisible": "False",
+          "MMECode": "MME007",
+          "ClampWithSlidingDevice": "False",
+          "SLNode": "11",
+          "AdapterPort": "1",
+          "ClampingSystemEmulation": "False",
+          "IncludeDetailsInLog": "True",
+          "CommutationEmulation": "False",
+          "GatewayEmulation": "False",
+          "AdapterEmulation": "False",
+          "BVTEmulation": "False",
+          "GateEmulation": "False",
+          "SLEmulation": "False",
+          "dVdtNode": "7",
+          "SCTUReadGraph": "False",
+          "NeedSCTUInitialization": "False",
+          "CentralDatabaseService": "net.tcp://192.168.0.134:730/SCME/SCME.IO.CentralDatabaseService",
+          "CentralDatabase": "net.tcp://192.168.0.134:730/SCME/CentralDatabase",
+          "Localization": "en-US"
+        }
       }
     ]
   }
-
 }
