--- a/SCME.Agent/SCME.Agent.csproj
+++ b/SCME.Agent/SCME.Agent.csproj
@@ -10,7 +10,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <PlatformTarget>x86</PlatformTarget>
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <Prefer32bit>true</Prefer32bit>
   </PropertyGroup>
 
