BF 38 US 18 VF 39 BF 29

--- a/SCME.ProfileBuilder/App.config
+++ b/SCME.ProfileBuilder/App.config
@@ -36,10 +36,10 @@
         <value>qwerty_123</value>
       </setting>
       <setting name="SQLiteFileName" serializeAs="String">
-        <value>C:\Users\Ivan\Desktop\SCME_ResultsDB_Local.sqlite</value>
+        <value>C:\Users\Ivan\Desktop\Работа\mme_software_TS05\Debug\UIService\Db\SCME_ResultsDB_Local.sqlite</value>
       </setting>
       <setting name="TypeDb" serializeAs="String">
-        <value>MSSQL</value>
+        <value>SQLite</value>
       </setting>
       <setting name="MSSQLDatabase" serializeAs="String">
         <value>SCME_ResultsDB</value>
