--- a/SCME.ProfileBuilder/Properties/Settings.settings
+++ b/SCME.ProfileBuilder/Properties/Settings.settings
@@ -27,10 +27,10 @@
       <Value Profile="(Default)">qwerty_123</Value>
     </Setting>
     <Setting Name="SQLiteFileName" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">C:\Users\Ivan\Desktop\SCME_ResultsDB_Local.sqlite</Value>
+      <Value Profile="(Default)">C:\Users\Ivan\Desktop\Работа\mme_software_TS05\Debug\UIService\Db\SCME_ResultsDB_Local.sqlite</Value>
     </Setting>
     <Setting Name="TypeDb" Type="SCME.Types.TypeDb" Scope="Application">
-      <Value Profile="(Default)">MSSQL</Value>
+      <Value Profile="(Default)">SQLite</Value>
     </Setting>
     <Setting Name="MSSQLDatabase" Type="System.String" Scope="Application">
       <Value Profile="(Default)">SCME_ResultsDB</Value>
