--- a/SCME.ProfileBuilder/SCME.ProfileBuilder.csproj
+++ b/SCME.ProfileBuilder/SCME.ProfileBuilder.csproj
@@ -11,7 +11,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
-    <Prefer32bit>true</Prefer32bit>
+    <Prefer32bit>false</Prefer32bit>
     <OutputPath>..\Debug\PB</OutputPath>
   </PropertyGroup>
 
