--- a/SCME.UIServiceConfig/App.config
+++ b/SCME.UIServiceConfig/App.config
@@ -62,7 +62,7 @@
         <value>False</value>
       </setting>
       <setting name="AccountsPath" serializeAs="String">
-        <value>AccountsConfig\Accounts.xml</value>
+        <value>..\..\AccountsConfig\Accounts.xml</value>
       </setting>
       <setting name="ClampIsVisible" serializeAs="String">
         <value>True</value>
@@ -173,7 +173,7 @@
         <value>True</value>
       </setting>
       <setting name="IsLocal" serializeAs="String">
-        <value>False</value>
+        <value>True</value>
       </setting>
       <setting name="DisableLogDB" serializeAs="String">
         <value>False</value>
@@ -222,9 +222,6 @@
       </setting>
       <setting name="SctuNode" serializeAs="String">
         <value>8</value>
-      </setting>
-      <setting name="DefaultHeight" serializeAs="String">
-        <value>30</value>
       </setting>
       <setting name="ForceLogFlush" serializeAs="String">
         <value>True</value>
@@ -296,7 +293,7 @@
         <value>False</value>
       </setting>
       <setting name="MMECode" serializeAs="String">
-        <value>MME007</value>
+        <value>A</value>
       </setting>
       <setting name="DebugUpdate" serializeAs="String">
         <value>True</value>
