--- a/SCME.ProfileBuilder/App.config
+++ b/SCME.ProfileBuilder/App.config
@@ -39,7 +39,7 @@
         <value>C:\Users\Ivan\Desktop\Работа\mme_software_TS05\Debug\UIService\Db\SCME_ResultsDB_Local.sqlite</value>
       </setting>
       <setting name="TypeDb" serializeAs="String">
-        <value>SQLite</value>
+        <value>MSSQL</value>
       </setting>
       <setting name="MSSQLDatabase" serializeAs="String">
         <value>SCME_ResultsDB</value>
